Web Inspector: Network panel does not show responses for application/json data https://bugs.webkit.org/show_bug.cgi?id=80684

Reviewed by Pavel Feldman.

Source/WebCore:

Test: http/tests/inspector/network/async-xhr-json-mime-type.html

* inspector/InspectorPageAgent.cpp:
(WebCore::createXHRTextDecoder):
(WebCore::InspectorPageAgent::cachedResourceContent):
* inspector/InspectorPageAgent.h:
* inspector/NetworkResourcesData.cpp:
(WebCore::createOtherResourceTextDecoder):
(WebCore):
(WebCore::NetworkResourcesData::responseReceived):

LayoutTests:

* http/tests/inspector/network/async-xhr-json-mime-type-expected.txt: Added.
* http/tests/inspector/network/async-xhr-json-mime-type.html: Added.
* http/tests/inspector/network/resources/json.php: Added.

Canonical link: https://commits.webkit.org/97984@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110393 268f45cc-cd09-0410-ab3c-d52691b4dbfc