LayoutTests/http/tests/inspector/network/resources/json.php
@@ -1,0 +1,5 @@
+<?php
+    header("Content-Type: application/json");
+?>
+{"number": "42"}
+
